Add MovieFind to my portfolio

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="https://github.com/litvem/T11_Project_Documentation"><img src="assets/img/portfolio/dentistimo.png" class="img-responsive"></a>
 			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="https://github.com/litvem/movie_find"><img src="assets/img/portfolio/movie-find.png" class="img-responsive"></a>
+			</div>
 		</div>
 	</div>
 	
